src/app/pages/timeline/components/fragments/tasklet/tasklet-card-fragment/tasklet-card-fragment.component.scss
@import '../../../../../../../sizes';
@import '../../../../../../../theme';
@import '../../../../../../../flex';

.tasklet-type {
  height: 32px;
}

.topic {
  font-size: 1.2em;
}

.project {
  padding: 3px 10px;
  margin-top: -25px;
  margin-bottom: 25px;

  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2),
  0 2px 2px 0 mat-color($mat-grey, 300),
  0 1px 5px 0 rgba(0, 0, 0, .12);
}

.light-theme {
  .tag {
    background: mat-color($mat-grey, 200) !important;
    color: mat-contrast($mat-grey, 200) !important;
  }
}

.dark-theme {
  .tag {
    background: mat-color($mat-grey, 400) !important;
    color: mat-contrast($mat-grey, 400) !important;
  }
}

.tag {
  -webkit-border-radius: 2px;
  border-radius: 2px;
  margin: 6px 6px 0 0;
  direction: ltr;
  font-family: 'Roboto', arial, sans-serif;
  font-size: 15px;
  float: left;
  align-items: center;
  height: 18px;
  padding: 3px 5px;
  text-align: left;
}

.tag-label {
  padding: 1px;
}

.light-theme {
  .person {
    background: mat-color($mat-grey, 400) !important;
    color: mat-contrast($mat-grey, 400) !important;
  }
}

.dark-theme {
  .person {
    background: mat-color($mat-grey, 600) !important;
    color: mat-contrast($mat-grey, 600) !important;
  }
}

.person {
  -webkit-border-radius: 2px;
  border-radius: 2px;
  margin: 6px 6px 0 0;
  direction: ltr;
  font-family: 'Roboto', arial, sans-serif;
  font-size: 15px;
  float: left;
  align-items: center;
  height: 18px;
  padding: 3px 5px;
  text-align: left;
}

.person-label {
  padding: 1px;
}

.time {
  background-color: mat-color($light-accent, 100);
  -webkit-border-radius: 2px;
  border-radius: 2px;
  margin: 6px 6px 0 0;
  color: mat-contrast($light-accent, 100);
  direction: ltr;
  font-family: 'Roboto', arial, sans-serif;
  font-size: 15px;
  float: left;
  align-items: center;
  height: 18px;
  padding: 3px 5px;
  text-align: left;
}

.time-label {
  padding: 1px;
}

.card-header-content {
  padding: 5px;
  width: 100%;
}

.delimiter {
  border: solid 0.25px transparent;
  clear: both;
}

.label {
  display: block;
  color: mat-color($mat-grey, 400);
  padding-bottom: 5px;
  font-size: 75%;
  /*-webkit-transform: translateX(-20%) scale(.75);
  transform: translateX(-12%) scale(.75);
  width: 133.33333%;*/
}

.tags-holder {
  padding: 0 24px 24px;
}

// Attachment

.hidden {
  display: none;
}

$side-attached-height: 40px;

.attachment-holder {
  min-height: $side-attached-height;
  width: 0;
}

.side-attached {
  height: $side-attached-height;
  vertical-align: middle;
}

$side-attached-width: 55px;
$side-attached-distance: 50px;

// Left

.left-attached, .left-attached-without-connector {
  color: mat-color($mat-grey, 500);
  width: $side-attached-width + $side-attached-distance;
  margin-left: - ($side-attached-width + 2 * $side-attached-distance);
  text-align: right;
  vertical-align: middle;
}

.left-attached::after {
  border-bottom: 2px solid mat-color($mat-grey, 500);
  content: '\00a0';
  position: absolute;
  width: $side-attached-distance;
  z-index: 0;
}

.left-attached-content {
  margin-right: 5px;
  display: inline-block;
  vertical-align: middle;
  line-height: $side-attached-height;
}

// Right

.right-attached {
  color: mat-color($mat-grey, 500);
  text-align: left;
  width: $side-attached-width;
  vertical-align: middle;
}

.right-attached::before {
  position: absolute;
  content: '\00a0';
  width: $side-attached-distance;
  margin-top: 0;
  border-bottom: 2px solid mat-color($mat-grey, 500);
  z-index: 0;
}

.right-attached-content {
  margin-left: $side-attached-distance - 5px;
}

.continue-icon {
  height: 36px;
  width: 36px;
}

app-tasklet-preview-fragment {
  margin: 10px auto;

  @media #{$breakpoint-small} {
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
  }
  @media #{$breakpoint-medium} {
    width: 450px;
  }
  @media #{$breakpoint-large} {
    width: 450px;
  }
}

//
// Material
//

mat-card {
  margin: 10px auto;

  @media #{$breakpoint-small} {
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
  }
  @media #{$breakpoint-medium} {
    width: 450px;
  }
  @media #{$breakpoint-large} {
    width: 450px;
  }
}

mat-card-header {
  font-weight: 700;

  display: flex;
  box-sizing: border-box;
  width: 100%;
}

mat-card-header {
  margin-left: 0;
  cursor: pointer;
}

.mat-card-header-text {
  margin: 0 !important;
}

mat-card-content {
  display: inline-block;
  margin-bottom: 0;
}

mat-card-actions {
  padding: 0;
  margin: 0;
}

.mat-expansion-panel {
  display: inherit;
}

.mat-expansion-panel:not([class*=mat-elevation-z]) {
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0),
  0 2px 2px 0 rgba(0, 0, 0, .14),
  0 1px 5px 0 rgba(0, 0, 0, 0);
}

.headers-align .mat-expansion-panel-header-title,
.headers-align .mat-expansion-panel-header-description {
  flex-basis: 0;
}

.headers-align .mat-expansion-panel-header-description {
  justify-content: space-between;
  align-items: center;
}

.mat-card-actions .mat-button:first-child, .mat-card-actions .mat-raised-button:first-child {
  margin-left: 0;
  margin-right: 0;
  padding-left: 15px;
  padding-right: 15px;
}

mat-card {
  &:hover .hidden {
    display: inline-block;
  }
}

